src/dnsmasq.h

#  define _(S) (S)
#  define _(S) gettext(S)
struct all_addr {
    union {
        struct in_addr addr4;
#ifdef HAVE_IPV6
        struct in6_addr addr6;
#endif
        /* for log_query */
        struct {
            uint16_t keytag, algo, digest;
        } log;
        /* for log_query */
        struct {
            uint32_t rcode;
        } rcode;
        /* for cache_insert of DNSKEY, DS */
        struct {
            uint16_t _class, type;
        } dnssec;
    } addr;
};
struct bogus_addr {
    struct in_addr addr;
    struct bogus_addr* next;
};
struct addrlist {
    struct all_addr addr;
    int flags, prefixlen;
    struct addrlist* next;
};
struct auth_zone {
    char* domain;
    struct auth_name_list {
        char* name;
        int flags;
        struct auth_name_list* next;
    } * interface_names;
    struct addrlist* subnet;
    struct addrlist* exclude;
    struct auth_zone* next;
};
/* struct sockaddr is not large enough to hold any address,
   and specifically not big enough to hold an IPv6 address.
   Blech. Roll our own. */
union mysockaddr {
    struct sockaddr sa;
    struct sockaddr_in in;
#if defined(HAVE_IPV6)
    struct sockaddr_in6 in6;
#endif
};
struct ServerFd {
    int fd;
    union mysockaddr source_addr;
//    char _interface[IF_NAMESIZE+1];
    std::string _interface;
    uint32_t preallocated;
    uint32_t used;
    uint32_t ifindex;
    struct ServerFd* next;
};
struct ipsets {
    char** sets;
    char* domain;
    struct ipsets* next;
};
unsigned char* skip_name(unsigned char* ansp, struct dns_header* header, size_t plen, int extrabytes);
unsigned char* skip_questions(struct dns_header* header, size_t plen);
unsigned char* skip_section(unsigned char* ansp, int count, struct dns_header* header, size_t plen);
uint32_t extract_request(struct dns_header* header, size_t qlen,
        char* name, uint16_t* typep);
size_t setup_reply(struct dns_header* header, size_t qlen,
        struct all_addr* addrp, uint32_t flags,
        unsigned long ttl);
int extract_addresses(struct dns_header* header, size_t qlen, char* name,
        time_t now, char** ipsets, int is_sign, int check_rebind,
        int no_cache_dnssec, int secure, int* doctored);
size_t answer_request(struct dns_header* header, char* limit, size_t qlen,
        struct in_addr local_addr, struct in_addr local_netmask,
        time_t now, int ad_reqd, int do_bit, int have_pseudoheader);
int check_for_bogus_wildcard(struct dns_header* header, size_t qlen, char* name,
        struct bogus_addr* baddr, time_t now);
int check_for_ignored_address(struct dns_header* header, size_t qlen, struct bogus_addr* baddr);
int check_for_local_domain(char* name, time_t now);
size_t resize_packet(struct dns_header* header, size_t plen,
        unsigned char* pheader, size_t hlen);
unsigned char* skip_questions(struct dns_header* header, size_t plen);
size_t answer_auth(struct dns_header* header, char* limit, size_t qlen,
        time_t now, union mysockaddr* peer_addr, int local_query,
        int do_bit, int have_pseudoheader);
int in_zone(struct auth_zone* zone, char* name, char** cut);
unsigned char* hash_questions(struct dns_header* header, size_t plen, char* name);
uint16_t rand16(void);
void* whine_malloc(size_t size);
int sa_len(union mysockaddr* addr);
int retry_send(ssize_t rc);
int prettyprint_addr(union mysockaddr* addr, char* buf);
char* print_mac(char* buff, unsigned char* mac, int len);
int read_write(int fd, unsigned char* packet, int size, int rw);
/* log.c */
void die(char* message, char* arg1, int exit_code) ATTRIBUTE_NORETURN;
void check_log_writer(int force);
/* network.c */
int indextoname(int fd, int index, char* name);
int local_bind(int fd, union mysockaddr* addr, char* intname, uint32_t ifindex, int is_tcp);
int random_sock(int family);
int enumerate_interfaces(int reset);
int iface_check(int family, struct all_addr* addr, char* name, int* auth);
int loopback_exception(int fd, int family, struct all_addr* addr, char* name);
int label_exception(int index, int family, struct all_addr* addr);
int detect_loop(char* query, int type);
/* rrfilter.c */
size_t rrfilter(struct dns_header* header, size_t plen, int mode);
/* edns0.c */
unsigned char* find_pseudoheader(struct dns_header* header, size_t plen,
        size_t* len, unsigned char** p, int* is_sign, int* is_last);
size_t add_do_bit(struct dns_header* header, size_t plen, unsigned char* limit);
size_t add_edns0_config(struct dns_header* header, size_t plen, unsigned char* limit,
        union mysockaddr* source, time_t now, int* check_subnet);
int check_source(struct dns_header* header, size_t plen, unsigned char* pseudoheader, union mysockaddr* peer);
/* arp.c */
int find_mac(union mysockaddr* addr, unsigned char* mac, int lazy, time_t now);
void dump_packet(int mask, void* packet, size_t len, union mysockaddr* src, union mysockaddr* dst);