src/slack.rs


    #[no_mangle]
    fn read_write(fd: i32, packet: mut Vec<u8>,
                  size: i32, rw: i32) -> i32;
    #[no_mangle]
    fn die(message: &mut String, arg1: &mut String,
           exit_code: i32) -> !;

}













pub type mode_t = __mode_t;



#[derive(Copy, Clone)]
#[repr(C)]
pub struct timeval {
    pub tv_sec: __time::Instant,
    pub tv_usec: __suseconds_t,
}



















#[derive(Copy, Clone, BitfieldStruct)]
#[repr(C)]
pub struct ip {
    #[bitfield(name = "ip_hl", ty = "libc::c_uint", bits = "0..=3")]
    #[bitfield(name = "ip_v", ty = "libc::c_uint", bits = "4..=7")]
    pub ip_hl_ip_v: [u8; 1],
    pub ip_tos: uint8_t,
    pub ip_len: u16,
    pub ip_id: u16,
    pub ip_off: u16,
    pub ip_ttl: uint8_t,
    pub ip_p: uint8_t,
    pub ip_sum: u16,
    pub ip_src: in_addr,
    pub ip_dst: in_addr,
}

#[derive(Copy, Clone)]
#[repr(C)]
pub struct ip6_hdr {
    pub ip6_ctlun: C2RustUnnamed_1,
    pub ip6_src: in6_addr,
    pub ip6_dst: in6_addr,
}
#[derive(Copy, Clone)]
#[repr(C)]
pub union C2RustUnnamed_111 {
    pub ip6_un1: ip6_hdrctl,
    pub ip6_un2_vfc: uint8_t,
}
#[derive(Copy, Clone)]
#[repr(C)]
pub struct ip6_hdrctl {
    pub ip6_un1_flow: uint32_t,
    pub ip6_un1_plen: uint16_t,
    pub ip6_un1_nxt: uint8_t,
    pub ip6_un1_hlim: uint8_t,
}

























#[derive(Copy, Clone)]
#[repr(C)]
pub struct serverfd {
    pub fd: i32,
    pub source_addr: NetAddress,
    pub interface: [libc::c_char; 17],
    pub ifindex: u32,
    pub used: u32,
    pub preallocated: u32,
    pub next:ServerFd,
}





































/* data link type */
#[derive(Copy, Clone)]
#[repr(C)]
pub struct pcaprec_hdr_s {
    pub ts_sec: u32_0,
    pub ts_usec: u32_0,
    pub incl_len: u32_0,
    pub orig_len: u32_0,
}
/* https://wiki.wireshark.org/Development/LibpcapFileFormat */
#[derive(Copy, Clone)]
#[repr(C)]
pub struct pcap_hdr_s {
    pub magic_number: u32_0,
    pub version_major: u16_0,
    pub version_minor: u16_0,
    pub thiszone: u32_0,
    pub sigfigs: u32_0,
    pub snaplen: u32_0,
    pub network: u32_0,
}
#[derive(Copy, Clone)]
#[repr(C)]
pub struct udphdr {
    pub uh_sport: u16_0,
    pub uh_dport: u16_0,
    pub uh_ulen: u16_0,
    pub uh_sum: u16_0,
}







#[inline]



#[inline]
unsafe extern "C" fn lstat64(mut __path: *const libc::c_char,
                             mut __statbuf: &mut stat64) -> i32 {
    return __lxstat64(1, __path, __statbuf);
}

extern "C" {










    #[no_mangle]
    fn memcpy(_:Vec<u8>, _: *const libc::c_void, _: u32)
              ->Vec<u8>;
    #[no_mangle]
    fn memmove(_:Vec<u8>, _: *const libc::c_void, _: u32)
               ->Vec<u8>;
    #[no_mangle]
    fn memcmp(_: *const libc::c_void, _: *const libc::c_void,
              _: u32) -> i32;






    #[no_mangle]
    fn find_mac(addr: NetAddress, mac: mut Vec<u8>,
                lazy: i32, now: time::Instant) -> i32;
    #[no_mangle]
    fn rrfilter(header: &mut dns_header, plen: usize, mode: i32)
                -> size_t;







    #[no_mangle]
    fn skip_name(ansp: mut Vec<u8>, header: &mut dns_header,
                 plen: usize, extrabytes: i32) -> mut Vec<u8>;
    #[no_mangle]
    fn skip_questions(header: &mut dns_header, plen: usize)
                      -> mut Vec<u8>;
    #[no_mangle]
    fn skip_section(ansp: mut Vec<u8>, count: i32,
                    header: &mut dns_header, plen: usize)
                    -> mut Vec<u8>;
    #[no_mangle]
    fn whine_malloc(size: usize) ->Vec<u8>;
    #[no_mangle]
    fn print_mac(buff: &mut String, mac: mut Vec<u8>,
                 len: i32) -> &mut String;
    #[no_mangle]
    fn free(__ptr:Vec<u8>);
}












































#[derive(Copy, Clone)]
#[repr(C)]
pub union NetAddress {
    pub sa: NetAddress,
    pub in_0: NetAddress_in,
    pub in6: NetAddress_in6,
}






































#[derive(Copy, Clone)]
#[repr(C)]
pub struct subnet_opt {
    pub family: u16_0,
    pub source_netmask: u8_0,
    pub scope_netmask: u8_0,
    pub addr: [u8_0; 16],
}







#[inline]




#[inline]
unsafe extern "C" fn mknod(mut __path: *const libc::c_char,
                           mut __mode: __mode_t, mut __dev: __dev_t)
                           -> i32 {
    return __xmknod(0, __path, __mode, &mut __dev);
}

extern "C" {








    #[no_mangle]
    fn socket(__domain: i32, __type: i32,
              __protocol: i32) -> i32;
    #[no_mangle]
    fn connect(__fd: i32, __addr: __CONST_NetAddress_ARG,
               __len: socklen_t) -> i32;
    #[no_mangle]
    fn getpeername(__fd: i32, __addr: __NetAddress_ARG,
                   __len:  &mut socklen_t)  -> i32;
    #[no_mangle]
    fn sendto(__fd: i32, __buf: *const libc::c_void, __n: usize,
              __flags: i32, __addr: __CONST_NetAddress_ARG,
              __addr_len: socklen_t) -> ssize_t;
    #[no_mangle]
    fn recvfrom(__fd: i32, __buf:Vec<u8>, __n: usize,
                __flags: i32, __addr: __NetAddress_ARG,
                __addr_len:  &mut socklen_t)  -> ssize_t;
    #[no_mangle]
    fn sendmsg(__fd: i32, __message: *const msghdr,
               __flags: i32) -> ssize_t;
    #[no_mangle]
    fn recvmsg(__fd: i32, __message: &mut msghdr,
               __flags: i32) -> ssize_t;



    #[no_mangle]
    fn memcpy(_:Vec<u8>, _: *const libc::c_void, _: u32)
              ->Vec<u8>;
    #[no_mangle]
    fn memset(_:Vec<u8>, _: i32, _: u32)
              ->Vec<u8>;
    #[no_mangle]
    fn memcmp(_: *const libc::c_void, _: *const libc::c_void,
              _: u32) -> i32;



    #[no_mangle]
    fn strerror(_: i32) -> &mut String;
    #[no_mangle]
    fn close(__fd: i32) -> i32;







    #[no_mangle]
    fn difftime(__time1: time::Instant, __time0: time::Instant) -> libc::c_double;
    #[no_mangle]
    fn __errno_location() -> ;




    #[no_mangle]
    fn check_for_local_domain(name: &mut String, now: time::Instant)
                              -> i32;
    #[no_mangle]
    fn resize_packet(header: &mut dns_header, plen: usize,
                     pheader: mut Vec<u8>, hlen: usize) -> size_t;
    #[no_mangle]
    fn answer_auth(header: &mut dns_header, limit: &mut String,
                   qlen: usize, now: time::Instant, peer_addr: NetAddress,
                   local_query: i32, do_bit: i32,
                   have_pseudoheader: i32) -> size_t;
    #[no_mangle]
    fn in_zone(zone: &mut auth_zone, name: &mut String,
               cut: String) -> i32;
    #[no_mangle]
    fn check_for_bogus_wildcard(header: &mut dns_header, qlen: usize,
                                name: &mut String,
                                baddr: &mut bogus_addr, now: time::Instant)
                                -> i32;
    #[no_mangle]
    fn hash_questions(header: &mut dns_header, plen: usize,
                      name: &mut String) -> mut Vec<u8>;
    #[no_mangle]
    fn rand16() -> u16;
    #[no_mangle]
    fn whine_malloc(size: usize) ->Vec<u8>;
    #[no_mangle]
    fn sa_len(addr: NetAddress) -> i32;




    #[no_mangle]
    fn retry_send(rc: ssize_t) -> i32;
    #[no_mangle]
    fn prettyprint_addr(addr: NetAddress, buf: &mut String)
                        -> i32;
    #[no_mangle]
    fn read_write(fd: i32, packet: mut Vec<u8>,
                  size: i32, rw: i32) -> i32;

    #[no_mangle]
    fn check_log_writer(force: i32);
    #[no_mangle]
    fn answer_request(header: &mut dns_header, limit: &mut String,
                      qlen: usize, local_addr: in_addr,
                      local_netmask: in_addr, now: time::Instant,
                      ad_reqd: i32, do_bit: i32,
                      have_pseudoheader: i32) -> size_t;
    #[no_mangle]
    fn extract_addresses(header: &mut dns_header, qlen: usize,
                         name: &mut String, now: time::Instant,
                         ipsets: String, is_sign: i32,
                         check_rebind: i32,
                         no_cache_dnssec: i32, secure: i32,
                         doctored: ) -> i32;
    #[no_mangle]
    fn setup_reply(header: &mut dns_header, qlen: usize,
                   addrp: &mut all_addr, flags: u32,
                   ttl: u32) -> size_t;
    #[no_mangle]
    fn extract_request(header: &mut dns_header, qlen: usize,
                       name: &mut String, typep:  &mut u16)
                       -> libc::c_uint;



    #[no_mangle]
    fn random_sock(family: i32) -> i32;
    #[no_mangle]
    fn check_for_ignored_address(header: &mut dns_header, qlen: usize,
                                 baddr:  &mut bogus_addr)  -> i32;
    #[no_mangle]
    fn enumerate_interfaces(reset: i32) -> i32;
    #[no_mangle]
    fn label_exception(index: i32, family: i32,
                       addr:  &mut all_addr)  -> i32;
    #[no_mangle]
    fn loopback_exception(fd: i32, family: i32,
                          addr: &mut all_addr, name: &mut String)
                          -> i32;
    #[no_mangle]
    fn iface_check(family: i32, addr: &mut all_addr,
                   name: &mut String, auth: )
                   -> i32;
    #[no_mangle]
    fn indextoname(fd: i32, index: i32,
                   name: &mut String) -> i32;
    #[no_mangle]
    fn local_bind(fd: i32, addr: NetAddress,
                  intname: &mut String, ifindex: u32,
                  is_tcp: i32) -> i32;
    #[no_mangle]
    fn detect_loop(query: &mut String, type_0: i32)
                   -> i32;
    #[no_mangle]
    fn find_pseudoheader(header: &mut dns_header, plen: usize,
                         len: &mut size_t, p: ,
                         is_sign: , is_last: )
                         -> mut Vec<u8>;
    #[no_mangle]
    fn add_do_bit(header: &mut dns_header, plen: usize,
                  limit: mut Vec<u8>) -> size_t;
    #[no_mangle]
    fn add_edns0_config(header: &mut dns_header, plen: usize,
                        limit: mut Vec<u8>, source: NetAddress,
                        now: time::Instant, check_subnet: ,
                        cacheable: ) -> size_t;

    #[no_mangle]
    fn rrfilter(header: &mut dns_header, plen: usize, mode: i32)
                -> size_t;
    #[no_mangle]
    fn check_source(header: &mut dns_header, plen: usize,
                    pseudoheader: mut Vec<u8>, peer: NetAddress)
                    -> i32;
    #[no_mangle]
    fn dump_packet(mask: i32, packet:Vec<u8>, len: usize,
                   src: NetAddress, dst: NetAddress);
}





pub type __off_t = i32;
pub type __off64_t = i32;

















pub type C2RustUnnamed999 = libc::c_uint;

















// pub const IPPROTO_MAX: C2RustUnnamed_1 = 256;
// pub const IPPROTO_RAW: C2RustUnnamed_1 = 255;
// pub const IPPROTO_MPLS: C2RustUnnamed_1 = 137;
// pub const IPPROTO_UDPLITE: C2RustUnnamed_1 = 136;
// pub const IPPROTO_SCTP: C2RustUnnamed_1 = 132;
// pub const IPPROTO_COMP: C2RustUnnamed_1 = 108;
// pub const IPPROTO_PIM: C2RustUnnamed_1 = 103;
// pub const IPPROTO_ENCAP: C2RustUnnamed_1 = 98;
// pub const IPPROTO_BEETPH: C2RustUnnamed_1 = 94;
// pub const IPPROTO_MTP: C2RustUnnamed_1 = 92;
// pub const IPPROTO_AH: C2RustUnnamed_1 = 51;
// pub const IPPROTO_ESP: C2RustUnnamed_1 = 50;
// pub const IPPROTO_GRE: C2RustUnnamed_1 = 47;
// pub const IPPROTO_RSVP: C2RustUnnamed_1 = 46;
// pub const IPPROTO_IPV6: C2RustUnnamed_1 = 41;
// pub const IPPROTO_DCCP: C2RustUnnamed_1 = 33;
// pub const IPPROTO_TP: C2RustUnnamed_1 = 29;
// pub const IPPROTO_IDP: C2RustUnnamed_1 = 22;
// pub const IPPROTO_UDP: C2RustUnnamed_1 = 17;
// pub const IPPROTO_PUP: C2RustUnnamed_1 = 12;
// pub const IPPROTO_EGP: C2RustUnnamed_1 = 8;
// pub const IPPROTO_TCP: C2RustUnnamed_1 = 6;
// pub const IPPROTO_IPIP: C2RustUnnamed_1 = 4;
// pub const IPPROTO_IGMP: C2RustUnnamed_1 = 2;
// pub const IPPROTO_ICMP: C2RustUnnamed_1 = 1;
// pub const IPPROTO_IP: C2RustUnnamed_1 = 0;
